@@ -7,11 +7,11 @@ import eu.optas.use_cases.api.BoundaryShip;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 class BoardD2BConverterTest {
 
@@ -20,17 +20,17 @@ class BoardD2BConverterTest {
         ShipD2BConverter shipD2BConverterMock = mock(ShipD2BConverter.class);
         BoardD2BConverter boardD2BConverter = new BoardD2BConverter(shipD2BConverterMock);
 
-        List<List<Integer>> grid = new ArrayList<>();
-        grid.add(new ArrayList<>(Arrays.asList(0, 0, 0, 0)));
+        List<List<Integer>> grid = List.of(List.of(0, 0, 0, 0));
 
         List<Ship> ships = new ArrayList<>();
         List<BoundaryShip> boundaryShips = new ArrayList<>();
         Board inputBoard = new Board(grid, ships);
         BoundaryBoard expectedBoard = new BoundaryBoard(grid, boundaryShips);
 
+        when(shipD2BConverterMock.convertAll(ships)).thenReturn(boundaryShips);
+
         BoundaryBoard convertedBoard = boardD2BConverter.convert(inputBoard);
 
-        assertThat(convertedBoard.getGrid()).isEqualTo(expectedBoard.getGrid());
-        assertThat(convertedBoard.getShips()).isEqualTo(expectedBoard.getShips());
+        assertThat(convertedBoard).usingRecursiveComparison().isEqualTo(expectedBoard);
     }
 }
